[package]
name = "arboretum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# imgui stuffs
imgui = { version = "0.11.0", features = ["docking"] }
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
copypasta = "0.8"
glium = "0.32.1"
