[package]
name = "arboretum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
eframe = { version = "0.22.0", features = ["persistence"] }
egui-toast = "0.8.0"
egui_dock = "0.6.3"
rayon = "1.7.0"
thiserror = "1.0.44"
